--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Djangocourse</title>
-  </head>
-  <body>
-    <h1>Articles</h1>
-    <ul>
-      {% for article in articles %}<li>{{ article.title }} with {{ article.word_count }} words.</li>{% endfor %}
-    </ul>
-  </body>
-</html>
+{% extends 'app/base.html' %}
+{% block content %}
+  <h1>Articles</h1>
+  <ul>
+    {% for article in articles %}<li>{{ article.title }} with {{ article.word_count }} words.</li>{% endfor %}
+  </ul>
+{% endblock content %}
