--- a/templates/app/article_delete.html
+++ b/templates/app/article_delete.html
@@ -6,4 +6,6 @@
     {% csrf_token %}
     <button type="submit">Delete</button>
   </form>
+
+  <a href="{% url 'home' %}">No, take me back</a>
 {% endblock content %}
