--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Djangocourse</title>
-</head>
-<body>
-    <nav>Common nav bar for all templates</nav>
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <li>
+          <a href="{% url "home" %}">Articles</a>
+        </li>
+        <li>
+          {% if user.is_authenticated %}
+            <form method="post" action="{% url 'account_logout' %}">
+              {% csrf_token %}
+              <button type="submit">Log out</button>
+            </form>
+          {% else %}
+            <a href="{% url 'account_login' %}">Log in</a>
+          {% endif %}
+        </li>
+      </ul>
+    </nav>
     {% block content %}
-    
     {% endblock content %}
-    <footer>Common footer for all templates</footer>
-</body>
+    <footer>
+      Common footer for all templates
+    </footer>
+  </body>
 </html>
